forbidden-sysctls/gk-contstraint-whitelist-sysctls.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUnsafeSysctls
metadata:
  name: psp-allowed-unsafe-sysctls
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedUnsafeSysctls:
    - kernel.shm_rmid_forced
    - net.ipv4.ip_local_port_range
    - net.ipv4.tcp_syncookies
    - net.ipv4.ping_group_range
    - net.ipv4.ip_forward
